add resouce image

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,4 @@
-.bg-intro {
-    background-image: url('bg_intro.jpg');
+.bg_intro {
+    background-image: url('/landingBg.png');
+    background-size: cover;
 }
