--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,9 +3,10 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-rgb: 245, 248, 251;
+  --foreground-rgb: #313131;
+  // --background-start-rgb: 214, 219, 220;
+  // --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,15 +19,21 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--background-rgb);
+  // background: linear-gradient(
+  //     to bottom,
+  //     transparent,
+  //     rgb(var(--background-end-rgb))
+  //   )
+  //   rgb(var(--background-start-rgb));
 }
 
 
   a[class*="btn"] {
     text-align: center;
+  }
+
+  .page {
+    padding-left: 256px;
+    background-color: rgb(var(--background-rgb));
   }
