--- a/components/Button/index.module.scss
+++ b/components/Button/index.module.scss
@@ -38,6 +38,7 @@
         height: var(--h-comment-form);
         padding: 0 14px;
         font-size: 14px;
+        width: 100%;
     }
 
     // Skin
@@ -68,6 +69,24 @@
         &:hover,
         &:focus {
             border: 1px solid var(--color-gray-a);
+        }
+    }
+
+    &.green {
+        width: 300px;
+        height: 40px;
+        background: #43B69A;
+        display: table-cell;
+    }
+
+    &.gray {
+        color: var(--color-gray-4);
+        background-color: var(--color-white);
+        border: 1px solid var(--color-gray-9);
+
+        &:hover,
+        &:focus {
+            border-color: var(--color-gray-4);
         }
     }
 }
