--- a/styles/variable.scss
+++ b/styles/variable.scss
@@ -9,6 +9,7 @@
     --color-gray-4-rgb: 76, 76, 76;
     --color-gray-6: #666666;
     --color-gray-7: #767676;
+    --color-green: #43B69A;
     /* Minimum WCAG AA Pass */
     --color-gray-8: #8c8c8c;
     /* Fail to WCAG AA */
