add invoice and expport to pdf via invoice add table header add breadcrumbs add support board

--- a/styles/components/layout/footer.module.scss
+++ b/styles/components/layout/footer.module.scss
@@ -2,8 +2,8 @@
     color: #313131;
     background: #F5F8FB;
     border-top: 2px solid #DEE1E7;
-    margin: 20px 50px 50px;
     height: 84px;
+    margin: 50px 0 25px;
 
     a {
         width: 80px;
