--- a/containers/billing/index.module.scss
+++ b/containers/billing/index.module.scss
@@ -1,7 +1,3 @@
-.container {
-    padding: 50px;
-}
-
 .box_section {
     border: 1px solid #DEE1E7;
     border-radius: 4px;
@@ -35,4 +31,151 @@
             }
         }
     }
+}
+
+.infoSection {
+    font-size: 14px;
+
+    hgroup {
+        h1 {
+            margin: 50px 0 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+    }
+
+    label {
+        border: 1px solid #DEE1E7;
+        background: #F7F8FE;
+        width: 180px;
+        line-height: 20px;
+        padding: 10px 0 10px 20px;
+        display: inline-block;
+    }
+
+    span {
+        padding: 10px 20px;
+        width: calc(100% - 180px);
+        border: 1px solid #DEE1E7;
+        background: linear-gradient(0deg, #FFF 0%, #FFF 100%), #313131;
+        display: inline-block;
+    }
+
+}
+
+.usage {
+    hgroup {
+        h1 {
+            margin: 50px 0 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+    }
+
+    table {
+        tr {
+            th {
+                font-weight: 600;
+                text-align: center;
+                padding: 10px 0;
+                border: 1px solid #DEE1E7;
+                background: #F7F8FE;
+            }
+
+            &:first-child {
+
+                th {
+                    &:first-child {
+                        width: 5%;
+                    }
+
+                    &:nth-child(2) {
+                        width: 10%;
+                    }
+
+                    &:nth-child(3) {
+                        width: 5%;
+                    }
+
+                    &:nth-child(4) {
+                        width: 10%;
+                    }
+
+                    &:nth-child(5) {
+                        width: 5%;
+                    }
+
+                    &:nth-child(6) {
+                        width: 8%;
+                    }
+
+                    &:nth-child(7) {
+                        width: 40%;
+                    }
+
+                    &:nth-child(8) {
+                        width: 8%;
+                    }
+
+                    &:nth-child(9) {
+                        width: 8%;
+                    }
+                }
+            }
+
+            td {
+                text-align: center;
+                padding: 10px 0;
+                border: 1px solid #DEE1E7;
+                background-color: #fff;
+            }
+        }
+    }
+}
+
+.summary {
+    hgroup {
+        h1 {
+            margin: 50px 0 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+    }
+
+    table {
+        tr {
+            th {
+                font-weight: 600;
+                text-align: left;
+                padding: 10px 20px;
+                border: 1px solid #DEE1E7;
+                background: #F7F8FE;
+            }
+
+            &:first-child {
+                th {
+                    &:first-child {
+                        width: 15%;
+                    }
+
+                    &:nth-child(2) {
+                        width: 30%;
+                    }
+
+                    &:nth-child(3) {
+                        width: 55%;
+                    }
+                }
+            }
+
+            td {
+                text-align: left;
+                padding: 10px 20px;
+                border: 1px solid #DEE1E7;
+                background-color: #fff;
+            }
+        }
+    }
+
+
 }
