--- a/containers/billing/invoice/InfoSection.module.scss
+++ b/containers/billing/invoice/InfoSection.module.scss
@@ -1,9 +1,10 @@
 .infoSection {
     font-size: 14px;
+    margin:15px 0 50px;
 
     hgroup {
         h1 {
-            margin: 50px 0 20px;
+            margin: 0 0 10px;
             font-size: 24px;
             font-weight: bold;
         }
