--- a/app/(sidebarLayout)/_common/Navgiation.module.scss
+++ b/app/(sidebarLayout)/_common/Navgiation.module.scss
@@ -1,75 +1,105 @@
 .container {
     width: 100%;
     padding: 0;
-    margin: 0;
-
+    margin: 30px auto;
     background: #202124;
     .user_name {
         font-size: 16px;
         color: #fff;
     }
-    .navigationItem {
-        width: 100%;
-        position: relative;
-        .firstItem {
-            display: flex;
-            width: 80%;
-            margin-left: 20%;
-            align-items: center;
-            justify-content: flex-end;
-            border-radius: 30px;
-            padding: 15px 12px;
-            position: relative;
-            &:hover {
-                background-color: #43B69A;
-            }
-           
-            & > svg {
-                width: 20px;
-                height: 20px;
-            }
-
-            span {
-                width: 30px;
-                text-align: center;
-                margin-left:30px;
-            }
-        > p {
-            text-decoration: none;
-            border-radius: 30px;
-            color: #fff;
-            font-size: 20px;
-            font-weight: 700;
-        }
+    > ul {
+        margin: 15px 0 30px;
     }
-        .depth {
-            &First {
-                p {font-size: 20px;}
-                color: #fff;
-            }
-            &Second {
-                width: 200px;
-                position: absolute;
-                right:-200px;
-                top: 0;
-                padding: 15px;
-                background-color:#33353c;
-                > div {
-                        position: relative;
-                    p {
-                        font-size: 16px;
-                    }
+    &.open {
+        margin:0;
+        > ul {
+            a {
+                margin-left:30px;
+                > span {
+                    margin-left: 30px;
                 }
             }
-            &Third {
-                width: 200px;
-                position: absolute;
-                right:-215px;
-                top: -5px;
-                padding: 10px;
-                background-color:#33353c;
+        }
+    }
+    &.close {
+        margin:0;
+        > ul {
+            a {
+                justify-content: center !important;
+                margin:0 auto;
+                > span {
+                    padding: 15px 0;
+                }
+            }
+        }
+    }
+    .navigationItem {
+        width: 100%;
+       
+        .depth {
+            width: 80%;
+            margin: 0 auto;
+            color: #fff;
+            display: flex;
+            &_0 {
+                justify-content: flex-end;
+                align-items: center;
+                border-radius: 30px;
+                padding: 15px 12px;
+                position: relative;
+                display: flex;
+                &:hover {
+                    background-color: #43B69A;
+                }
+                
+                & > svg {
+                    width: 20px;
+                    height: 20px;
+                }
+
+                span {
+                    width: 30px;
+                    text-align: center;
+                    position: relative;
+                    svg {
+                        position: absolute;
+                        top:50%;
+                        left:50%;
+                        transform:translate(-50%,-50%);
+                    }
+
+                }
                 p {
-                    font-size: 16px;
+                    text-decoration: none;
+                    border-radius: 30px;
+                    color: #fff;
+                    font-size: 20px;
+                    letter-spacing: -.5px;
+                    font-weight: 700;
+                }
+            }
+
+            &_1 {
+                font-size: 18px;
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                margin-top: 15px;
+                margin-bottom: 15px;
+                p {
+                    margin-right: 10%;
+                }
+    
+            }
+            &_2 {
+                font-weight: 500;
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                margin-top: 15px;
+                margin-bottom: 15px;
+                p {
+                    margin-right: 10%;
                 }
             }
         }
