--- a/components/SummaryTables/TableBody.module.scss
+++ b/components/SummaryTables/TableBody.module.scss
@@ -5,20 +5,59 @@
         line-height: 25px;
         td {
             text-align: center;
+            border: 1px solid #DEE1E7;
+            padding: 0 10px;
         }
     }
-}
-.top10 {
-    tr {
-        td {
-            &:nth-child(1) {
-                text-align: left;
+    .top10 {
+        tr {
+            td {
+                &:nth-child(1) {
+                    text-align: left;
+                }
+                &:nth-child(2) {
+                }
+                &:nth-child(3) {
+                }
+                &:nth-child(4) {
+                }
             }
-            &:nth-child(2) {
+        }
+    }
+    &.announce {
+        tr {
+            td {
+                &:nth-child(1) {
+                    width: 15%;
+                }
+                &:nth-child(2) {
+                    width: 70%;
+                }
+                &:nth-child(3) {
+                    width: 15%;
+                }
             }
-            &:nth-child(3) {
-            }
-            &:nth-child(4) {
+        }
+    }
+    &.support {
+        tr {
+            td {
+                &:nth-child(1) {
+                    width: 10%;
+                }
+                &:nth-child(2) {
+                    width: 50%;
+                    text-align: left;
+                }
+                &:nth-child(3) {
+                    width: 15%;
+                }
+                &:nth-child(4) {
+                    width: 10%;
+                }
+                &:nth-child(5) {
+                    width: 15%;
+                }
             }
         }
     }
