--- a/containers/billing/invoice/Usage.module.scss
+++ b/containers/billing/invoice/Usage.module.scss
@@ -10,6 +10,13 @@
 
     table {
         tr {
+            &:nth-child(2) {
+                th {
+                    width: 8%;
+                    min-width: 80px;
+                    font-size: 11px;
+                }
+            }
             th {
                 font-weight: 600;
                 text-align: center;
@@ -21,46 +28,65 @@
             &:first-child {
 
                 th {
+                    font-size: 13px;
                     &:first-child {
-                        width: 5%;
+                        width: 6%;
+                        min-width: 60px;
                     }
 
                     &:nth-child(2) {
                         width: 10%;
+                        min-width: 80px;
                     }
 
                     &:nth-child(3) {
-                        width: 5%;
+                        width: 10%;
+                        min-width: 100px;
                     }
 
                     &:nth-child(4) {
-                        width: 10%;
+                        width: 6%;
+                        min-width: 60px;
                     }
 
                     &:nth-child(5) {
-                        width: 5%;
+                        width: 12%;
+                        min-width: 120px;
                     }
 
                     &:nth-child(6) {
-                        width: 8%;
+                        width: 6%;
+                        min-width: 60px;
                     }
 
                     &:nth-child(7) {
-                        width: 20%;
+                        width: 8%;
+                        min-width: 80px;
                     }
 
                     &:nth-child(8) {
-                        width: 8%;
+                        width: 30%;
+                        min-width: 300px;
                     }
 
                     &:nth-child(9) {
-                        width: 8%;
+                        width: 10%;
+                        min-width: 100px;
+                    }
+                    &:nth-child(10) {
+                        width: 10%;
+                        min-width: 100px;
+                    }
+                    &:nth-child(11) {
+                        width: 10%;
+                        min-width: 100px;
                     }
                 }
             }
 
             td {
                 text-align: center;
+                font-size: 13px;
                 padding: 10px 0;
                 border: 1px solid #DEE1E7;
                 background-color: #fff;
