--- a/components/Tables/index.module.scss
+++ b/components/Tables/index.module.scss
@@ -1,10 +1,9 @@
 .tableContainer {
     overflow-x: auto;
     background-color:#fff;
-    width: 100% !important;
+    width: calc(100% - 100px) !important;
     padding: 0 50px;
     table {
-
         width: 100%; 
     }
 }
