--- a/components/searchbar/index.module.scss
+++ b/components/searchbar/index.module.scss
@@ -7,10 +7,10 @@
   transition: all 0.2s;
   display: flex;  
   margin: 20px 0 10px;
+  padding: 0 50px;
 
   .inputGroup {
     position: relative;
-    padding: 15px 0;
     margin-right: 15px;
     input {
       border: 1px solid #DEE1E7;
