--- a/containers/billing/invoice/InvoiceList.module.scss
+++ b/containers/billing/invoice/InvoiceList.module.scss
@@ -1,3 +1,13 @@
 .table {
     background-color: #fff;
+    &.withSearchbar {
+        & > div {
+            padding: 50px 50px 30px;
+        }
+        & > div {
+            &:nth-child(2) {
+                padding: 0 50px 50px 50px;
+            }
+        }
+    }
 }
