--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -32,10 +32,20 @@ body {
   //   rgb(var(--background-start-rgb));
   .container {
     margin: 0 auto;
+    padding: 0 15px;
+    max-width: 1920px;
+    width: 100%;
   }
   .mainContent {flex-grow: 1}
 }
-
+@media (max-width: 1920px) {
+  body {
+    .container {
+      padding: 0 10px;
+      min-width: calc(100% - 220px);
+    }
+  }
+}
 
 a[class*="btn"] {
   text-align: center;
@@ -43,34 +53,7 @@ a[class*="btn"] {
 .page {
   background-color: rgb(var(--background-rgb));
 }
-@media (min-width: 640px){
-  .container{
-    max-width: 640px;
-  }
-}
-@media (min-width: 768px){
-  .container{
-    max-width: 768px;
-  }
-}
-@media (min-width: 1024px){
-  .container{
-    max-width: 1024px;
-    padding: 1em;
-  }
-}
-@media (min-width: 1280px){
-  .container{
-    max-width: 1280px;
-    padding: 2em;
-  }
-}
-@media (min-width: 1536px){
-  .container{
-    max-width: 1536px;
-    padding: 3em;
-  }
-}
+
 .gray {
   color: var(--color-gray-4);
 }
