--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,6 +24,7 @@
 body {
   color: rgb(var(--foreground-rgb));
   background-color: var(--background-rgb);
+  font-size: 14px;
   // background: linear-gradient(
   //     to bottom,
   //     transparent,
