--- a/components/MonthBar/index.module.scss
+++ b/components/MonthBar/index.module.scss
@@ -5,14 +5,14 @@
     width: 100%;
     height: 60px;
     background-color: #fff;
-
+    border: 1px solid #DEE1E7;
 
     .monthBarLeft {
-        border: 1px solid #DEE1E7;
+        border-right: 1px solid #DEE1E7;
         padding-right: 15px;
     }
     .monthBarRight {
-        border: 1px solid #DEE1E7;
+        border-left: 1px solid #DEE1E7;
         padding-left: 15px;
     }
 
@@ -43,7 +43,6 @@
     }
 
     .monthBarCenter {
-        border: 1px solid #DEE1E7;
         width: 100%;
         text-align: center;
         font-size: 20px;
