--- a/components/Tables/TableBody.module.scss
+++ b/components/Tables/TableBody.module.scss
@@ -3,6 +3,7 @@
         margin: 15px 0 10px;
         height: 50px;
         line-height: 25px;
+        cursor: pointer;
         td {
             text-align: center;
             border: 1px solid #DEE1E7;
