--- a/app/(sidebarLayout)/_common/Navgiation.module.scss
+++ b/app/(sidebarLayout)/_common/Navgiation.module.scss
@@ -16,7 +16,7 @@
             a {
                 margin-left:30px;
                 > span {
-                    margin-left: 30px;
+                    margin-left: 15px;
                 }
             }
         }
@@ -25,10 +25,21 @@
         margin:0;
         > ul {
             a {
+                width: 40px !important;
+                height: 40px !important;
+                border-radius: 50%;
+                margin: 15px auto !important;
                 justify-content: center !important;
-                margin:0 auto;
                 > span {
-                    padding: 15px 0;
+                    width:20px;
+                    height:20px;
+                    svg {
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%,-50%);
+                    }
+                   
                 }
             }
         }
@@ -45,7 +56,7 @@
                 justify-content: flex-end;
                 align-items: center;
                 border-radius: 30px;
-                padding: 15px 12px;
+                padding: 10px 12px;
                 position: relative;
                 display: flex;
                 &:hover {
@@ -58,29 +69,22 @@
                 }
 
                 span {
-                    width: 30px;
+                    width: 20px;
                     text-align: center;
                     position: relative;
-                    svg {
-                        position: absolute;
-                        top:50%;
-                        left:50%;
-                        transform:translate(-50%,-50%);
-                    }
-
                 }
                 p {
                     text-decoration: none;
                     border-radius: 30px;
                     color: #fff;
-                    font-size: 20px;
+                    font-size: 16px;
                     letter-spacing: -.5px;
                     font-weight: 700;
                 }
             }
 
             &_1 {
-                font-size: 18px;
+                font-size: 14px;
                 display: flex;
                 justify-content: flex-end;
                 align-items: center;
