--- a/components/Summary/index.module.scss
+++ b/components/Summary/index.module.scss
@@ -108,10 +108,18 @@
             font-weight: 400;
             line-height: normal;
         }
-        > div {
+        > span {
+            display:flex;
+            align-items: baseline;
+            font-size: 30px;
+            color: #43B69A;
+            div {
             font-size: 60px;
             font-weight: bold;
             letter-spacing: -1px;
+            margin-right: 10px;
+            color: #313131;
+        }
         }
     }
 }
