--- a/containers/billing/invoice/InfoSection.module.scss
+++ b/containers/billing/invoice/InfoSection.module.scss
@@ -9,22 +9,30 @@
             font-weight: bold;
         }
     }
+ & > div {
+    & > div {
+        border: 1px solid #DEE1E7;  
+        label {
+           
+            background: #F7F8FE;
+            width: 180px;
+            line-height: 20px;
+            padding: 10px 0 10px 20px;
+            display: inline-block;
+        }
 
-    label {
-        border: 1px solid #DEE1E7;
-        background: #F7F8FE;
-        width: 180px;
-        line-height: 20px;
-        padding: 10px 0 10px 20px;
-        display: inline-block;
+        span {
+            padding: 10px 20px;
+            width: calc(100% - 180px);
+            border-left: 1px solid #DEE1E7;
+            background: linear-gradient(0deg, #FFF 0%, #FFF 100%), #313131;
+            display: inline-block;
+        }
+        &:nth-child(1) {
+            border-top: 1px solid #DEE1E7; 
+            border-left: 1px solid #DEE1E7;  
+            border-right: 1px solid #DEE1E7;  
+        }
     }
-
-    span {
-        padding: 10px 20px;
-        width: calc(100% - 180px);
-        border: 1px solid #DEE1E7;
-        background: linear-gradient(0deg, #FFF 0%, #FFF 100%), #313131;
-        display: inline-block;
-    }
-
+}
 }
