--- a/containers/billing/invoice/Summary.module.scss
+++ b/containers/billing/invoice/Summary.module.scss
@@ -38,8 +38,11 @@
             td {
                 text-align: left;
                 padding: 10px 20px;
-                border: 1px solid #DEE1E7;
+                border-right: 1px solid #DEE1E7;
+                border-top: 1px solid #DEE1E7;
+                border-bottom: 1px solid #DEE1E7;
                 background-color: #fff;
+                height: 40px;
             }
         }
         thead {
@@ -63,4 +66,9 @@
         text-align: right;
         font-size: 16px;
         font-weight: 600;
+        tr {
+            td {
+                height:42px;
+            }
+        }
     }
