modify sidebar when close, collapse navi

--- a/app/(sidebarLayout)/_common/Sidebar.module.scss
+++ b/app/(sidebarLayout)/_common/Sidebar.module.scss
@@ -39,7 +39,7 @@
             background: #202124;
             z-index:0;
         }
-
+        .userName {opacity:0;}
     }
     .toggle_btn {
         background: #2B3035;
