--- a/app/(sidebarLayout)/_common/UserInfo.module.scss
+++ b/app/(sidebarLayout)/_common/UserInfo.module.scss
@@ -1,6 +1,21 @@
 .userinfo {
     background: #2B3035;
     z-index:10;
+    &.open {
+        & > div {
+            & > div {
+                opacity:1;
+            }
+        }
+    }
+    &.close {
+        & > div {
+            & > div {
+                opacity:0;
+            }
+        }
+
+    }
     .container {
         display: block;
         width:80%;
