--- a/containers/billing/invoice/InvoiceVisual.module.scss
+++ b/containers/billing/invoice/InvoiceVisual.module.scss
@@ -81,10 +81,21 @@
     label {
         font-size: 24px;
     }
+
     .countup {
-        font-size: 40px;
-        font-weight: 600;
-    }
+        span {
+            display: flex;
+            font-size: 24px;
+            font-weight: 600;
+            font-size: 40px;
+            font-weight: 600;
+            align-items: baseline;
+            div {
+                font-size: 60px;
+                margin-right: 15px;
+            }
+         }
+}
     .right {
         .countup {
                 color: #43B69A;
