add register customers with address

--- a/components/Toast/index.module.scss
+++ b/components/Toast/index.module.scss
@@ -4,6 +4,7 @@
     padding: 16px 28px;
     color: #fff;
     background: rgba(107, 115, 135, 0.8);
+    z-index:999;
     
     &--icon {
         width: 22px;
