--- a/components/Modal/Address.module.scss
+++ b/components/Modal/Address.module.scss
@@ -1,3 +1,12 @@
 .address {
-    
+    .searchInput {
+        input {
+            width: calc(100% - 110px);
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            padding: 5px 10px;
+            margin: 8px 10px 8px 0;
+            box-sizing: border-box;
+        }
+    }
 }
