--- a/components/Form/CustomersAddPerForm.module.scss
+++ b/components/Form/CustomersAddPerForm.module.scss
@@ -8,7 +8,10 @@
         margin:0 0 20px;
     }
     .inputGroup {
-        width: 100%;
+        width: 30%;
+        &:nth-child(3n - 1) {
+            margin: 0 5%;
+        }
         margin-bottom: 10px;
         label {
             color: #2E322F;
