--- a/components/Modal/index.module.scss
+++ b/components/Modal/index.module.scss
@@ -64,5 +64,9 @@
             width: 500px;
             height: 500px;
         }
+        &.user {
+            width: 500px;
+            height: 500px;
+        }
     }
 }
