fixed form and regenerateToken

--- a/components/Toast/index.module.scss
+++ b/components/Toast/index.module.scss
@@ -3,6 +3,7 @@
     border-radius: 50px;
     padding: 16px 28px;
     color: #fff;
+    z-index:9999;
     background: rgba(107, 115, 135, 0.8);
     z-index:999;
     
